tests/paczka1/small_fuzzy/77112666.err
Error in line 3: VrrBe6ACu A532 89,0
Error in line 5: VrrBe6ACu S453 89,8
Error in line 12: 8K0OQV S105 33,1
